examples/fail/definition-without-type.agda
-- Definitions need a type signature

A = Set

-- should fail
